[package]
name = "sample_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
regex = "1.10.2"
rand = "0.8.5"
csv = "1.3.0"
pest = "2.7.4"


[dependencies.newick_parser]
path = "../newick_parser"